mdapi-source/original-package/unpackaged/objects/QA_Hierarchy__c.object
<CustomObject>
    <description>Stores the hierarchies of all test cases for increased performance.</description>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depth__c</fullName>
        <label>Depth</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Full_Path__c</fullName>
        <externalId>true</externalId>
        <label>Full Path</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>